--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
     "expo": "~50.0.13",
+    "expo-asset": "~9.0.2",
+    "expo-file-system": "~16.0.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.5",
+    "react-native-fs": "^2.20.0",
+    "react-native-switch": "^1.5.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
