--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-picker/picker": "2.6.1",
-    "expo": "~50.0.13",
-    "expo-asset": "~9.0.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "expo": "^51.0.2",
+    "expo-asset": "~10.0.6",
     "expo-file-system": "~16.0.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-fs": "^2.20.0",
+    "react-native-navigation": "^7.39.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-switch": "^1.5.1",
     "react-native-web": "~0.19.6"
   },
